DB connection and Vinyl & Category repos added

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VinylShopDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=VinylShop;Trusted_Connection=True;User Id=vladm;Password="
+  }
 }
